--- a/view/screenThree.fxml
+++ b/view/screenThree.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
