--- a/view/screenTwo.fxml
+++ b/view/screenTwo.fxml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" layoutX="14.0" layoutY="76.0" prefHeight="310.0" prefWidth="186.0" style="-fx-background-color: #D3D3D3;">
-         <children>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-               <buttons>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Sales Tracking" translateX="-50.0" />
-               </buttons>
-            </ButtonBar>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-              <buttons>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Order" translateX="-60.0" />
-              </buttons>
-            </ButtonBar>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-               <buttons>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Advanced Search" translateX="-40.0" />
-               </buttons>
-            </ButtonBar>
-         </children>
-      </VBox>
-      <VBox layoutX="259.0" layoutY="65.0" prefHeight="321.0" prefWidth="178.0" spacing="10.0" style="-fx-background-color: #D3D3D3;">
-         <children>
-            <TextField prefHeight="26.0" prefWidth="95.0" />
-            <Label prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
-            <VBox prefHeight="267.0" prefWidth="178.0" spacing="3.0">
-               <children>
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-               </children>
-            </VBox>
-         </children>
-      </VBox>
-      <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="464.0" style="-fx-background-color: #87CEFA;" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="650.0" />
+      <Button fx:id="profile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="35.0" styleClass="login-button" stylesheets="@application.css" />
+      <Button fx:id="home" layoutX="63.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="35.0" styleClass="home-button" stylesheets="@application.css" />
+      <ImageView fitHeight="43.0" fitWidth="123.0" layoutX="484.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../your-logo-here.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="userSearch" layoutX="49.0" layoutY="100.0" prefHeight="32.0" prefWidth="479.0">
+         <effect>
+            <InnerShadow />
+         </effect>
+      </TextField>
+      <Button fx:id="searchButton" layoutX="542.0" layoutY="100.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
+         <effect>
+            <InnerShadow />
+         </effect>
+      </Button>
+      <TextArea fx:id="searchInp" layoutX="63.0" layoutY="150.0" prefHeight="38.0" prefWidth="451.0" visible="false" />
+      <TextArea layoutX="14.0" layoutY="199.0" prefHeight="311.0" prefWidth="623.0">
+         <effect>
+            <InnerShadow />
+         </effect>
+      </TextArea>
+      <TextArea fx:id="result1" layoutX="32.0" layoutY="217.0" prefHeight="67.0" prefWidth="588.0" />
+      <TextArea fx:id="result2" layoutX="32.0" layoutY="284.0" prefHeight="67.0" prefWidth="588.0" />
+      <TextArea fx:id="result3" layoutX="32.0" layoutY="355.0" prefHeight="67.0" prefWidth="588.0" />
+      <TextArea fx:id="result4" layoutX="32.0" layoutY="422.0" prefHeight="67.0" prefWidth="588.0" />
    </children>
-</Pane>
+</AnchorPane>
