created controller classes, renames fxmls

--- a/view/homeScreen.fxml
+++ b/view/homeScreen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
    <children>
       <VBox alignment="CENTER" layoutX="14.0" layoutY="76.0" prefHeight="310.0" prefWidth="186.0" style="-fx-background-color: #D3D3D3;">
          <children>
