--- a/view/itemDetailsScreen.fxml
+++ b/view/itemDetailsScreen.fxml
@@ -15,7 +15,7 @@
       <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d9e1" height="168.0" layoutX="30.0" layoutY="217.0" stroke="#1a00ff" strokeType="INSIDE" width="580.0" />
             <ImageView fx:id="shoeImage" fitHeight="106.0" fitWidth="192.0" layoutX="224.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="orderButton" alignment="CENTER" layoutX="360.0" layoutY="411.0" mnemonicParsing="false" onMouseClicked="#addToOrder" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: BLUE;" text="ADD TO ORDER" textFill="WHITE" />
+            <Button fx:id="orderButton" alignment="CENTER" layoutX="360.0" layoutY="411.0" mnemonicParsing="false" onAction="#addToOrder" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: BLUE;" text="ADD TO ORDER" textFill="WHITE" />
             <Text fx:id="stock" layoutX="89.0" layoutY="432.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pairs In Stock: " wrappingWidth="202.6708984375" />
             <Text fx:id="itemDescription" layoutX="60.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item Description:" wrappingWidth="192.00000762939453">
                <font>
@@ -28,11 +28,11 @@
             <Text fx:id="model" layoutX="224.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model:" wrappingWidth="114.96485114097595" />
             <Text fx:id="barcode" layoutX="367.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Barcode:  " wrappingWidth="114.96484756469727" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="69.0" stroke="BLACK" strokeType="INSIDE" width="640.0" />
-            <ImageView fx:id="profileImage" fitHeight="51.0" fitWidth="88.0" layoutX="14.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="profileButton" fitHeight="51.0" fitWidth="88.0" layoutX="14.0" layoutY="9.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../Downloads/msn-people-person-profile-user-icon--icon-search-engine-11.png" />
                </image></ImageView>
-            <ImageView fx:id="homeButton" fitHeight="51.0" fitWidth="51.0" layoutX="74.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="homeButton" fitHeight="51.0" fitWidth="51.0" layoutX="74.0" layoutY="12.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../Downloads/home-house-silhouette-icon-building--public-domain-pictures--20.png" />
                </image>
