--- a/view/homeScreen.fxml
+++ b/view/homeScreen.fxml
@@ -1,48 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
    <children>
-      <VBox alignment="CENTER" layoutX="14.0" layoutY="76.0" prefHeight="310.0" prefWidth="186.0" style="-fx-background-color: #D3D3D3;">
+      <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="463.0" style="-fx-background-color: #87CEFA;" />
+      <Label layoutX="140.0" layoutY="128.0" prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
+      <HBox alignment="CENTER" layoutX="14.0" layoutY="66.0" prefHeight="45.0" prefWidth="420.0">
          <children>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-               <buttons>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Sales Tracking" translateX="-50.0" />
-               </buttons>
-            </ButtonBar>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-              <buttons>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToOrderScreen" text="My Order" translateX="-60.0" />
-              </buttons>
-            </ButtonBar>
-            <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="186.0">
-               <buttons>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Advanced Search" translateX="-40.0" />
-               </buttons>
-            </ButtonBar>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Advanced Search">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </Button>
+          <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToOrderScreen" text="My Order">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Button>
          </children>
-      </VBox>
-      <VBox layoutX="259.0" layoutY="65.0" prefHeight="321.0" prefWidth="178.0" spacing="10.0" style="-fx-background-color: #D3D3D3;">
-         <children>
-            <TextField prefHeight="26.0" prefWidth="95.0" />
-            <Label prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
-            <VBox prefHeight="267.0" prefWidth="178.0" spacing="3.0">
-               <children>
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="145.0" translateX="15.0" />
-               </children>
-            </VBox>
-         </children>
-      </VBox>
-      <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="464.0" style="-fx-background-color: #87CEFA;" />
+      </HBox>
+      <ListView layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="410.0" style="-fx-background-color: LIGHT GRAY;" />
    </children>
 </Pane>
