added h, p buttons. linked scenes w/ buttons

--- a/view/orderScreen.fxml
+++ b/view/orderScreen.fxml
@@ -10,7 +10,11 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderScreenController">
    <children>
       <ListView layoutX="30.0" layoutY="120.0" prefHeight="294.0" prefWidth="402.0" style="-fx-background-color: GRAY;" />
-      <HBox layoutX="-1.0" prefHeight="84.0" prefWidth="664.0" style="-fx-background-color: BLUE;" />
+      <HBox layoutX="-1.0" prefHeight="84.0" prefWidth="664.0" style="-fx-background-color: 87CEFA;">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="33.0" text="p" translateX="15.0" translateY="25.0" />
+            <Button mnemonicParsing="false" onAction="#goToHome" prefHeight="30.0" prefWidth="33.0" text="h" translateX="30.0" translateY="25.0" />
+         </children></HBox>
       <Label layoutX="30.0" layoutY="96.0" prefHeight="17.0" prefWidth="123.0" text="Your order" />
       <TextField layoutX="448.0" layoutY="144.0" text="Total: " />
       <Button layoutX="467.0" layoutY="221.0" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Continue Shopping" />
