--- a/view/homeScreen.fxml
+++ b/view/homeScreen.fxml
@@ -4,27 +4,36 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
+<AnchorPane prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
    <children>
-      <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="463.0" style="-fx-background-color: #87CEFA;" />
-      <Label layoutX="140.0" layoutY="128.0" prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
-      <HBox alignment="CENTER" layoutX="14.0" layoutY="66.0" prefHeight="45.0" prefWidth="420.0">
+      <Pane layoutX="3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="584.0">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Advanced Search">
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
-            </Button>
-          <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToOrderScreen" text="My Order">
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Button>
+            <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="587.0" style="-fx-background-color: #87CEFA;">
+               <children>
+                  <Button maxWidth="67.0" minHeight="-Infinity" minWidth="35.0" mnemonicParsing="false" prefHeight="26.0" text="p" translateX="15.0" translateY="15.0" />
+               </children>
+            </HBox>
+            <Label layoutX="202.0" layoutY="127.0" prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
+            <HBox alignment="CENTER" layoutX="14.0" layoutY="66.0" prefHeight="45.0" prefWidth="536.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Advanced Search">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToOrderScreen" text="My Order">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <ListView layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="536.0" style="-fx-background-color: LIGHT GRAY;" />
          </children>
-      </HBox>
-      <ListView layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="410.0" style="-fx-background-color: LIGHT GRAY;" />
+      </Pane>
    </children>
-</Pane>
+</AnchorPane>
