--- a/view/homeScreen.fxml
+++ b/view/homeScreen.fxml
@@ -4,35 +4,44 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
+<AnchorPane prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.homeScreenController">
    <children>
       <Pane layoutX="3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="584.0">
          <children>
-            <HBox layoutX="-3.0" prefHeight="58.0" prefWidth="587.0" style="-fx-background-color: #87CEFA;">
-               <children>
-                  <Button maxWidth="67.0" minHeight="-Infinity" minWidth="35.0" mnemonicParsing="false" prefHeight="26.0" text="p" translateX="15.0" translateY="15.0" />
-               </children>
-            </HBox>
-            <Label layoutX="202.0" layoutY="127.0" prefHeight="24.0" prefWidth="178.0" text="New Arrivals/Incoming Inventory" />
+            <Label layoutX="185.0" layoutY="127.0" prefHeight="24.0" prefWidth="224.0" text="New Arrivals/Incoming Inventory" />
             <HBox alignment="CENTER" layoutX="14.0" layoutY="66.0" prefHeight="45.0" prefWidth="536.0">
                <children>
+                  <Button alignment="CENTER" maxWidth="162.0" minHeight="-Infinity" minWidth="35.0" mnemonicParsing="false" onAction="#switchToInventory" prefHeight="33.0" prefWidth="162.0" text="Add To Inventory">
+                     <HBox.margin>
+                        <Insets right="40.0" />
+                     </HBox.margin>
+                  </Button>
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Advanced Search">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Button>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#switchToOrderScreen" text="My Order">
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
-                  </Button>
                </children>
             </HBox>
-            <ListView layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="536.0" style="-fx-background-color: LIGHT GRAY;" />
+            <ListView layoutX="25.0" layoutY="177.0" prefHeight="200.0" prefWidth="536.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="-6.0" stroke="BLACK" strokeType="INSIDE" width="591.0" />
+            <ImageView fitHeight="52.0" fitWidth="53.0" layoutX="2.0" layoutY="3.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/profileImg.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="52.0" fitWidth="53.0" layoutX="60.0" layoutY="4.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/cartImg.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
