--- a/view/itemDetailsScreen.fxml
+++ b/view/itemDetailsScreen.fxml
@@ -11,30 +11,35 @@
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.itemDetailsScreenController">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="584.0" VBox.vgrow="ALWAYS">
       <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d9e1" height="168.0" layoutX="30.0" layoutY="217.0" stroke="#1a00ff" strokeType="INSIDE" width="580.0" />
-            <ImageView fx:id="shoeImage" fitHeight="106.0" fitWidth="192.0" layoutX="224.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="orderButton" alignment="CENTER" layoutX="360.0" layoutY="411.0" mnemonicParsing="false" onAction="#addToOrder" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: BLUE;" text="ADD TO ORDER" textFill="WHITE" />
-            <Text fx:id="stock" layoutX="89.0" layoutY="432.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pairs In Stock: " wrappingWidth="202.6708984375" />
-            <Text fx:id="itemDescription" layoutX="60.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item Description:" wrappingWidth="192.00000762939453">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d9e1" height="168.0" layoutX="30.0" layoutY="181.0" stroke="#1a00ff" strokeType="INSIDE" width="580.0" />
+            <ImageView fx:id="shoeImage" fitHeight="101.0" fitWidth="136.0" layoutX="252.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="orderButton" alignment="CENTER" layoutX="230.0" layoutY="355.0" mnemonicParsing="false" onAction="#addToOrder" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: BLUE;" text="ADD TO ORDER" textFill="WHITE" />
+            <Text fx:id="stock" layoutX="379.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pairs In Stock: " wrappingWidth="202.6708984375" />
+            <Text fx:id="itemDescription" layoutX="59.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item Description:" wrappingWidth="192.00000762939453">
                <font>
                   <Font size="25.0" />
                </font>
             </Text>
-            <Text fx:id="size" layoutX="89.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size:" wrappingWidth="114.96484756469727" />
-            <Text fx:id="color" layoutX="89.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Color:" wrappingWidth="114.96484756469727" />
-            <Text fx:id="price" layoutX="224.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" wrappingWidth="114.96484756469727" />
-            <Text fx:id="model" layoutX="224.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model:" wrappingWidth="114.96485114097595" />
-            <Text fx:id="barcode" layoutX="367.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Barcode:  " wrappingWidth="114.96484756469727" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="69.0" stroke="BLACK" strokeType="INSIDE" width="640.0" />
-            <ImageView fx:id="profileButton" fitHeight="51.0" fitWidth="88.0" layoutX="14.0" layoutY="9.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
+            <Text fx:id="size" layoutX="89.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size:" wrappingWidth="114.96484756469727" />
+            <Text fx:id="color" layoutX="89.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Color:" wrappingWidth="114.96484756469727" />
+            <Text fx:id="price" layoutX="224.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" wrappingWidth="114.96484756469727" />
+            <Text fx:id="model" layoutX="224.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model:" wrappingWidth="114.96485114097595" />
+            <Text fx:id="barcode" layoutX="379.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Barcode:  " wrappingWidth="114.96484756469727" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="640.0" />
+            <ImageView fx:id="profileButton" fitHeight="51.0" fitWidth="88.0" layoutX="5.0" layoutY="5.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Downloads/msn-people-person-profile-user-icon--icon-search-engine-11.png" />
+                  <Image url="@../../images/profileImg.png" />
                </image></ImageView>
-            <ImageView fx:id="homeButton" fitHeight="51.0" fitWidth="51.0" layoutX="74.0" layoutY="12.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="homeButton" fitHeight="51.0" fitWidth="51.0" layoutX="64.0" layoutY="6.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Downloads/home-house-silhouette-icon-building--public-domain-pictures--20.png" />
+                  <Image url="@../../images/homeImg.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="cartButton" fitHeight="51.0" fitWidth="51.0" layoutX="121.0" layoutY="6.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/cartImg.png" />
                </image>
             </ImageView>
       </children>
