--- a/view/orderScreen.fxml
+++ b/view/orderScreen.fxml
@@ -4,20 +4,28 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderScreenController">
    <children>
       <ListView layoutX="30.0" layoutY="120.0" prefHeight="294.0" prefWidth="402.0" style="-fx-background-color: GRAY;" />
-      <HBox layoutX="-1.0" prefHeight="84.0" prefWidth="664.0" style="-fx-background-color: 87CEFA;">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="33.0" text="p" translateX="15.0" translateY="25.0" />
-            <Button mnemonicParsing="false" onAction="#goToHome" prefHeight="30.0" prefWidth="33.0" text="h" translateX="30.0" translateY="25.0" />
-         </children></HBox>
       <Label layoutX="30.0" layoutY="96.0" prefHeight="17.0" prefWidth="123.0" text="Your order" />
-      <TextField layoutX="448.0" layoutY="144.0" text="Total: " />
-      <Button layoutX="467.0" layoutY="221.0" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Continue Shopping" />
-      <Button layoutX="487.0" layoutY="288.0" mnemonicParsing="false" text="Place Order" />
+      <TextField layoutX="440.0" layoutY="144.0" prefHeight="31.0" prefWidth="139.0" text="Total: " />
+      <Button layoutX="435.0" layoutY="214.0" mnemonicParsing="false" onAction="#switchToSearchScreen" text="Continue Shopping" />
+      <Button layoutX="461.0" layoutY="292.0" mnemonicParsing="false" text="Place Order" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
+      <ImageView fitHeight="54.0" fitWidth="59.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/profileImg.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="54.0" fitWidth="59.0" layoutX="54.0" layoutY="2.0" onMouseClicked="#goHome" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/homeImg.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
