--- a/view/searchScreen.fxml
+++ b/view/searchScreen.fxml
@@ -9,35 +9,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="650.0" />
-      <Button fx:id="profile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="35.0" styleClass="login-button" stylesheets="@application.css" />
-      <Button fx:id="home" layoutX="63.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="35.0" styleClass="home-button" onAction="#goToHome" stylesheets="@application.css" />
-      <ImageView fitHeight="43.0" fitWidth="123.0" layoutX="484.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../your-logo-here.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="userSearch" layoutX="49.0" layoutY="100.0" prefHeight="32.0" prefWidth="479.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
+      <TextField fx:id="userSearch" layoutX="14.0" layoutY="100.0" prefHeight="32.0" prefWidth="434.0">
          <effect>
             <InnerShadow />
          </effect>
       </TextField>
-      <Button fx:id="searchButton" layoutX="542.0" layoutY="100.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="searchButton" layoutX="472.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchScreen" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
          <effect>
             <InnerShadow />
          </effect>
       </Button>
       <TextArea fx:id="searchInp" layoutX="63.0" layoutY="150.0" prefHeight="38.0" prefWidth="451.0" visible="false" />
-      <TextArea layoutX="14.0" layoutY="199.0" prefHeight="311.0" prefWidth="623.0">
+      <TextArea layoutX="14.0" layoutY="199.0" prefHeight="311.0" prefWidth="557.0">
          <effect>
             <InnerShadow />
          </effect>
       </TextArea>
-      <TextArea fx:id="result1" layoutX="32.0" layoutY="217.0" prefHeight="67.0" prefWidth="588.0" />
-      <TextArea fx:id="result2" layoutX="32.0" layoutY="284.0" prefHeight="67.0" prefWidth="588.0" />
-      <TextArea fx:id="result3" layoutX="32.0" layoutY="355.0" prefHeight="67.0" prefWidth="588.0" />
-      <TextArea fx:id="result4" layoutX="32.0" layoutY="422.0" prefHeight="67.0" prefWidth="588.0" />
+      <TextArea fx:id="result1" layoutX="22.0" layoutY="217.0" prefHeight="67.0" prefWidth="434.0" />
+      <TextArea fx:id="result2" layoutX="22.0" layoutY="284.0" prefHeight="67.0" prefWidth="434.0" />
+      <TextArea fx:id="result3" layoutX="22.0" layoutY="355.0" prefHeight="67.0" prefWidth="434.0" />
+      <TextArea fx:id="result4" layoutX="22.0" layoutY="422.0" prefHeight="67.0" prefWidth="434.0" />
+      <ImageView fitHeight="67.0" fitWidth="63.0" onMouseClicked="#goToProfile" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/profileImg.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="67.0" fitWidth="63.0" layoutX="63.0" layoutY="4.0" onMouseClicked="#goToHome" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/homeImg.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="67.0" fitWidth="72.0" layoutX="126.0" onMouseClicked="#goToCart" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/cartImg.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="detailsOne" layoutX="461.0" layoutY="221.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
+      <Button fx:id="detailsTwo" layoutX="461.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
+      <Button fx:id="detailsThree" layoutX="461.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
+      <Button fx:id="detailsFour" layoutX="461.0" layoutY="426.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
    </children>
 </AnchorPane>
