--- a/view/searchScreen.fxml
+++ b/view/searchScreen.fxml
@@ -17,12 +17,12 @@
             <InnerShadow />
          </effect>
       </TextField>
-      <Button fx:id="searchButton" layoutX="472.0" layoutY="100.0" mnemonicParsing="false" onAction="#switchScreen" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="searchButton" layoutX="472.0" layoutY="100.0" mnemonicParsing="false" onAction="#search" prefHeight="32.0" prefWidth="94.0" styleClass="toggle-button" stylesheets="@application.css" text="SEARCH" textAlignment="CENTER" textFill="WHITE">
          <effect>
             <InnerShadow />
          </effect>
       </Button>
-      <TextArea fx:id="searchInp" layoutX="63.0" layoutY="150.0" prefHeight="38.0" prefWidth="451.0" visible="false" />
+      <TextArea fx:id="searchInput" layoutX="63.0" layoutY="150.0" prefHeight="38.0" prefWidth="451.0" visible="false" />
       <TextArea layoutX="14.0" layoutY="199.0" prefHeight="311.0" prefWidth="557.0">
          <effect>
             <InnerShadow />
