--- a/view/searchScreen.fxml
+++ b/view/searchScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchScreenController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="67.0" stroke="BLACK" strokeType="INSIDE" width="584.0" />
       <TextField fx:id="userSearch" layoutX="14.0" layoutY="100.0" prefHeight="32.0" prefWidth="434.0">
@@ -51,5 +52,6 @@
       <Button fx:id="detailsTwo" layoutX="461.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
       <Button fx:id="detailsThree" layoutX="461.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
       <Button fx:id="detailsFour" layoutX="461.0" layoutY="426.0" mnemonicParsing="false" onMouseClicked="#viewDetails" prefHeight="60.0" prefWidth="107.0" text="View Details" textAlignment="CENTER" />
+      <ListView fx:id="results" layoutX="16.0" layoutY="136.0" prefHeight="60.0" prefWidth="511.0" />
    </children>
 </AnchorPane>
