--- a/view/logInScreen.fxml
+++ b/view/logInScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.logInScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInScreenController">
    <children>
       <Button fx:id="logInButton" layoutX="232.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#logInMethod" prefHeight="31.0" prefWidth="121.0" text="LOG IN" />
       <TextField fx:id="usernameInput" layoutX="254.0" layoutY="110.0" prefHeight="31.0" prefWidth="300.0" />
